<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:layout_margin="6dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:orientation="horizontal"
    android:background="#ffffff"
    android:weightSum="7"
    android:id="@+id/llContent">

    <ImageView
        android:layout_weight="1.5"
        android:id="@+id/imgBookImage"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:src="@mipmap/ic_launcher"
        android:padding="5dp"
        android:scaleType="centerCrop"/>

    <RelativeLayout
        android:layout_weight="3.3"
        android:layout_width="0dp"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txtBookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_of_the_book"
            android:padding="8dp"
            android:textSize="18sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/txtBookAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtBookName"
            android:text="@string/name_of_the_author"
            android:padding="8dp"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/txtBookPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/rs_299"
            android:padding="8dp"
            android:layout_below="@id/txtBookAuthor"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#357a38"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/txtBookRatingLogo"
        android:layout_weight="1.5"
        android:layout_width="0dp"
        android:padding="4dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_ratings_foreground"
        android:drawablePadding="4dp"
        android:layout_gravity="center">

    </TextView>

    <TextView
        android:id="@+id/txtBookRating"
        android:layout_weight="0.5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="4.5"
        android:textColor="#ffca28"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

</LinearLayout>

</androidx.cardview.widget.CardView>
