<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".activity.DescriptionActivity">
    
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:orientation="horizontal"
                android:background="#ffffff"
                android:weightSum="6.7"
                android:id="@+id/llContent">

                <ImageView
                    android:layout_weight="1.4"
                    android:id="@+id/imgBookImage"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:src="@mipmap/ic_launcher"
                    android:padding="5dp"
                    android:scaleType="centerCrop"/>

                <RelativeLayout
                    android:layout_weight="3.3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/txtBookName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_of_the_book"
                        android:padding="8dp"
                        android:textSize="18sp"
                        android:textColor="#000000"/>

                    <TextView
                        android:id="@+id/txtBookAuthor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtBookName"
                        android:text="@string/name_of_the_author"
                        android:padding="8dp"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/txtBookPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="@string/rs_299"
                        android:padding="8dp"
                        android:layout_below="@id/txtBookAuthor"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#357a38"/>
                </RelativeLayout>

                <TextView
                    android:id="@+id/txtBookRatingLogo"
                    android:layout_weight="1.3"
                    android:layout_width="0dp"
                    android:padding="4dp"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_ratings_foreground"
                    android:drawablePadding="4dp"
                    android:layout_gravity="center">

                </TextView>

                <TextView
                    android:id="@+id/txtBookRating"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="4.5"
                    android:textColor="#ffca28"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>

            </LinearLayout>
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/llContent">
                
                <TextView
                    android:id="@+id/txtAboutTheBookStatic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dp"
                    android:padding="6dp"
                    android:text="About The Book"
                    android:textSize="16dp"
                    android:textStyle="bold"/>
                
                <TextView
                    android:id="@+id/txtBookDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtAboutTheBookStatic"
                    android:layout_marginTop="10dp"
                    android:padding="6dp"
                    android:text="Hello Blank Fragment"
                    android:textSize="18sp"
                    android:textColor="#000000"/>
                
            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>
    
    <Button
        android:id="@+id/btnAddToFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:textSize="19sp"
        android:textStyle="bold"
        android:text="Add To Favourites"/>
    
    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</RelativeLayout>